# RasterTek-Unified

./: .gitignore  CMakeLists.txt  README.md
data/textures/: sprite_data_01.txt
inc/: RasterTek.h  applicationclass.h  bitmapclass.h  cameraclass.h  d3dclass.h  lightclass.h  modelclass.h  shaderclass.h  systemclass.h  textureclass.h  timerclass.h
include/: RasterTek.h  inputclass.h
shaders/: color.ps  color.vs  light.ps  light.vs  texture.ps  texture.vs
src/: RasterTek.h  applicationclass.cpp  bitmapclass.cpp  cameraclass.cpp  d3dclass.cpp  inputclass.cpp  lightclass.cpp  main.cpp  modelclass.cpp  shaderclass.cpp  systemclass.cpp  systemclass.h  textureclass.cpp  timerclass.cpp
